@@ -3,9 +3,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.sakaiproject.purepoms</groupId>
-        <artifactId>sakai-standard-tool</artifactId>
+        <groupId>org.sakaiproject</groupId>
+        <artifactId>master</artifactId>
         <version>2.9-SNAPSHOT</version>
+        <relativePath>../master</relativePath>
     </parent>
 
     <name>sakai-announcement base pom</name>
@@ -25,12 +26,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sakai.courier.version>2.9-SNAPSHOT</sakai.courier.version>
-        <sakai.entitybroker.version>1.5-SNAPSHOT</sakai.entitybroker.version>
-        <sakai.message.version>2.9-SNAPSHOT</sakai.message.version>
-        <sakai.scheduler.version>2.9-SNAPSHOT</sakai.scheduler.version>
-        <sakai.site.version>2.9-SNAPSHOT</sakai.site.version>
-        <sakai.velocity.version>2.9-SNAPSHOT</sakai.velocity.version>
     </properties>
 
     <scm>
@@ -46,30 +41,6 @@
             <url>scpexe://source.sakaiproject.org/var/www/html/release/announcement/${project.version}</url>
         </site>
     </distributionManagement>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>maven2-central-repo</id>
-            <name>Maven2 Central Repo</name>
-            <url>http://repo1.maven.org/maven2/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-        <pluginRepository>
-            <id>Sakai Plugin Repo</id>
-            <url>http://source.sakaiproject.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
 
     <repositories>
         <repository>
@@ -96,18 +67,6 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-        <repository>
-            <id>default</id>
-            <name>Maven Repository Switchboard</name>
-            <layout>default</layout>
-            <url>http://repo1.maven.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
     </repositories>
 
     <dependencyManagement>
@@ -124,23 +83,6 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.sakaiproject.courier</groupId>
-                <artifactId>sakai-courier-api</artifactId>
-                <version>${sakai.courier.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.entitybroker</groupId>
-                <artifactId>entitybroker-utils</artifactId>
-                <version>${sakai.entitybroker.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.message</groupId>
-                <artifactId>sakai-message-api</artifactId>
-                <version>${sakai.message.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
                 <groupId>org.sakaiproject.message</groupId>
                 <artifactId>sakai-message-impl</artifactId>
                 <version>${sakai.message.version}</version>
@@ -150,46 +92,21 @@
                 <artifactId>sakai-mergedlist-util</artifactId>
                 <version>${sakai.site.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.scheduler</groupId>
-                <artifactId>scheduler-api</artifactId>
-                <version>${sakai.scheduler.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.velocity</groupId>
-                <artifactId>sakai-velocity-tool-api</artifactId>
-                <version>${sakai.velocity.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.velocity</groupId>
-                <artifactId>sakai-velocity-tool</artifactId>
-                <version>${sakai.velocity.version}</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
     
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8</version>
-                <configuration>
-                    <debug>true</debug>
-                    <links>
-                        <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
-                        <link>http://download.oracle.com/javase/6/docs/api/</link>
-                    </links>
-                    <breakiterator>true</breakiterator>
-                    <verbose>false</verbose>
-                    <aggregate>true</aggregate>
-                    <minmemory>168m</minmemory>
-                    <maxmemory>1024m</maxmemory>
-                    <additionalJOption>-J-Xms168m -J-Xmx1024m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
+    <dependencies>
+        <dependency>
+            <groupId>org.sakaiproject.kernel</groupId>
+            <artifactId>sakai-kernel-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.kernel</groupId>
+            <artifactId>sakai-component-manager</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.message</groupId>
+            <artifactId>sakai-message-api</artifactId>
+        </dependency>
+    </dependencies>
 </project>
